# rustnum

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: activations.rs  distributions.rs  fft.rs  lib.rs  linalg.rs  ops.rs  random.rs  range.rs  ranges.rs  tensors.rs  types.rs
src/core/: complex.rs  consts.rs  mod.rs  set.rs
src/generators/: mod.rs  normal.rs  range.rs
src/numbers/: complex.rs  mod.rs
src/prelude/: coord.rs  mod.rs  set.rs  shape.rs
src/tensors/: base.rs  coord.rs  mod.rs  shape.rs  stats.rs  tensors.rs
