[package]
name = "rustnum"
version = "0.1.0"
description = "A library to work with numbers and number distributions"
authors = ["Andrea Coronese <sixpounder@protonmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
# build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
num-traits = "0.2.14"
